# dashboard-llm

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: test_embedder.py  test_llm.py  test_local_hf_embedder.py  test_nlp_strategies.py  test_real_openai_embedder.py  test_translator.py  test_yandex_embedder.py
src/: main.py
src/nlp_module/: embed_strategy.py  embedder.py  embedder_context.py  llm.py  llm_context.py  llm_strategy.py  translator.py
